# CALCUL_task2

./: CMakeLists.txt  Makefile.txt  build.ninja  calculator.cpp  calculator.h  main.cpp  rules.ninja
